[package]
name = "cs5600-project"
version = "0.1.0"
authors = ["Jeffrey Meyer <itotallyrock>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
sha2 = "0.9.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"