[package]
name = "cs5600-project"
version = "0.1.0"
authors = ["Jeffrey Meyer <itotallyrock>", "Mitchell Meier <mdmfvz@mst.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
lazy_static = "1.4"
sha2 = "0.9.1"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0"
libp2p = "0.28"
futures = "0.3"
async-std = "1.6.5"
#env_logger = "0.7.1"
#pnet = "0.26.0"
#isahc = "0.9.13"
native-windows-gui = "1.0.6"
native-windows-derive = "1.0.2"
