[package]
name = "hello_world"
version = "0.1.0"
authors = ["Mitchell Meier <mdmfvz@mst.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features = ["derive"] } 
serde_json = "1.0"
libp2p = "0.28.1"
futures = "0.3.6"
async-std = "1.6.5"
env_logger = "0.7.1"
pnet = "0.26.0"
